melhorando detalhes do texto

--- a/Web/index.html
+++ b/Web/index.html
@@ -11,8 +11,8 @@
         <section class="blue center full">
             <div class="image">
                 <img src="assets/img/indexweb.png" alt="" />
-                <h1>O que é a WEB?</h1>
             </div>
+                <h1>O que é a Web</h1>
         </section>
         <section class="">
             <div class="text">
@@ -106,7 +106,7 @@
 ">documentação</a>.
           </p>
         </section>
-        <section class="sass-pink">
+        <section class="green">
             <h3>Entender dos protocolos e como eles funcionam pode ser o caminho para abrir muitas Portas!</h3>
             <p>
               <b>Portas</b> como as portas utilizadas por nós clientes,temos uma porta padrão, geralmente para requisições de formato HTTP as portas utilizadas são a 80 (uma porta conhecida, de baixa numeração) e a 8080, já para requisições HTTPS por exemplo a porta padrão utilizada é a 443, ambas requisições utilizam  os protocolos TCP/UDP para caracterizar a forma de passar arquivos e IP para endereçar saída e destino.
@@ -146,11 +146,8 @@
             </ul>
         </section>
         <section>
-            <div class="image">
-                <img src="../assets/img/clothes.png" alt="Homem de Chapéu" class="reduces"/>
-            </div>
             <div class="text">
-                <h3>Para finalizar! Web server ou Web services?</h3>
+                <h3>E para finalizar! Web server ou Web services?</h3>
                 <p>
                   Basicamente um web server é um servidor que retorna páginas HTML, PHP, contendo diferentes formatos de arquivo como, png, jpeg, pdf e etc, para um cliente na web. Já um webservice é o serviço em si, o site, o aplicativo, o sistema que faz uso da web.
                 </p>
@@ -160,7 +157,7 @@
         <section class="blue center">
             <div class="text">
                 <h1>
-                    E aí, a introdução a WEB é isso aí.
+                    Seja Bem vindo ao mundo da Web!
                 </h1>
             </div>
             <div class="image">
