Algumas modificações para melhoria de explicação

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             </p>
             <div>
                 <ul class="menu">
+                    <a target="_blank" href="web/index.html">
+                        <li><img src="web/assets/img/web.png" alt="Ionic" /> - Arquitetura da web</li>
+                    </a>
                     <a target="_blank" href="https://infojrufba.github.io/guias/ilp">
                         <li><img src="ilp/assets/img/ilp.svg" alt="ILP" class="invert" /> - Introdução à Lógica de Programação</li>
                     </a>
@@ -56,9 +59,6 @@
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/guias/regex" class="inactive">
                         <li>RegEx - Reg[ular] Ex[pression]!</li>
-                    </a>
-                    <a target="_blank" href="Web/index.html">
-                        <li><img src="Web/assets/img/web.png" alt="Ionic" /> - O Maravilhoso mundo da Web </li>
                     </a>
                 </ul>
             </div>
